<resources>

    <string name="app_name">Podcastr</string>
    
	<!--  -->
    <string name="loading">Loading</string>
    
    <!--  -->
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    
    <!--  -->
    <string name="search_hint">Search Podcasts</string>
    
    <!--  -->
    <string name="watch_this_podcast">Watch This Podcast</string>
    
    <!--  -->
    <string name="description">Media Controls</string>
    
    <!--  -->
    <string name="tap_to_see">Tap Here To See The Video Player</string>
    
    <!--  -->
    <string name="contact_form">Contact Form</string>
	<string name="message">Message (500 Characters Only)</string>
	<string name="email_address">Email Address</string>
	<string name="do_not_share">We Do Not Share Your Email Address With Anybody. Period.</string>
	<string name="send">Send</string>
	<string name="message_empty">Please Enter A Message</string>
	<string name="email_invalid">Please Enter A Valid Email Address</string>
	<string name="message_sent">Message Successfully Sent</string>
	<string name="message_not_sent">Message Could Not Be Sent. Please Try Again.</string>
	<string name="not_a_bot">Are You A Bot? Try Again After 15 Seconds</string>
	
	<!--  -->
	<string name="proceed_to_download">Proceed To Download?</string>
	<string name="yes_download">Yes, Download</string>
	<string name="no_download">No, Don\'t Download</string>
	
	<!--  -->
	<string name="check_for_update">Check For Updates To Podcast?</string>
	<string name="yes_check_for_update">Yes, Check For Updates</string>
	<string name="no_check_for_updates">No, Don\'t Check For Updates</string>
	
	<!--  -->
	<string name="favorites">Favorites</string>
	<string name="recents">Recents</string>
	
	<!--  -->
	<string name="enter_feed_url">Enter The Feed URL Here</string>
	
	<!--  -->
	<string name="stopping_playback">Stopping Podcastr Due to Low Memory</string>
</resources>
