<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/contactFormLabel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:textSize="21sp"
        android:typeface="monospace"
        android:text="@string/contact_form" />
   	<EditText
         android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="6"
         android:background="@drawable/shape_rectangle"
         android:gravity="start"
         android:hint="@string/message"
         android:inputType="textMultiLine"
         android:padding="5dp"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         android:maxLength="500"
         android:typeface="monospace" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:background="@drawable/shape_rectangle"
        android:layout_marginTop="2dp"
        android:hint="@string/email_address"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:typeface="monospace"/>
    
    <TextView
        android:id="@+id/privacyLabel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:layout_marginTop="2dp"
      	android:text="@string/do_not_share"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:typeface="monospace" />
    
    <Button android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:minWidth="120dp"
        android:id="@+id/send"
        android:background="@drawable/student_ambassador_bevel_button"
        android:textColor="@android:color/white"
        android:text="@string/send" />
    
</LinearLayout>
